--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am the Coding Bootcamp student and a graphic designer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Poland</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Painting, watching Netflix</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Software/web developer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Wolverhampton, UK</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I treat it as a new chance and a challenge for a significant change in my life</p>
     </section>
 
     <footer id="footer">
