--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I am the Coding Bootcamp student and a graphic designer</p>
+      <p>I am the Coding Bootcamp student and a graphic designer.</p>
       <h1>Where I'm From</h1>
       <p>Poland</p>
       <h1>What are your favorite hobbies?</h1>
@@ -27,7 +27,7 @@
       <h1>Where do you live?</h1>
       <p>Wolverhampton, UK</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>I treat it as a new chance and a challenge for a significant change in my life</p>
+      <p>I treat it as a new chance and a challenge for a significant change in my life.</p>
     </section>
 
     <footer id="footer">
